Bienvenue, chers contributeurs!
This commit adds an application aimed towards contributing users.

Features includes:
- command for user import from CSV
- endpoint for listing of contributors
