# contributors/urls.py
@@ -1,0 +1,12 @@
+from django.urls import path
+
+
+from contributors.views import ContributorCollectionView
+
+urlpatterns = [
+    path(
+        'contributors/',
+        ContributorCollectionView.as_view(),
+        name='contributor-collection'
+    ),
+]
